--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -20,7 +20,7 @@ $title-color: black;
 
 // Bulma text variables
 $body-font-size: 1.06em;
-$family-primary: "Roboto", sans-serif;
+$family-primary: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
 
 // Bulma navbar variables
 $navbar-background-color: black;
