--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -51,7 +51,7 @@ $navbar-padding-vertical: 0;
 $navbar-padding-horizontal: 1rem;
 
 // Bulma menu variables
-$menu-label-font-size: $menu-font-size;
+$menu-label-font-size: 0.9rem;
 $menu-item-color: $dark-gray;
 $menu-item-active-color: black;
 $menu-item-active-background-color: white;
