--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -139,6 +139,21 @@ $footer-color: white;
     }
   }
 
+  &.tk-hero-bg {
+    // position: relative;
+    // top: 0;
+    // left: 0;
+    // // z-index: -1;
+
+    .tk-float {
+      position: fixed;
+      transition: 120s all;
+      // color: rgba(3,155,229,0.33);
+      transform: rotate(-23deg);
+      z-index: 0;
+    }
+  }
+
   &.tk-users {
     .title {
       font-size: 1.8em;
@@ -154,6 +169,20 @@ $footer-color: white;
     }
   }
 }
+/*
+.test {
+	position: fixed;
+	transition: 120s all;
+	color: rgba(3,155,229,0.33);
+	transform: rotate(-23deg);
+}
+.background {
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: -1;
+}
+*/
 
 .tk-features,
 .tk-stack {
