--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -139,26 +139,36 @@ $footer-color: white;
     }
   }
 
-  &.tk-hero-bg {
+  .tk-hero-bg {
     position: relative;
-    // top: 0;
-    // left: 0;
-    // // z-index: -1;
+    // overflow: hidden;
 
     .tk-float {
-      top: 50px;
-      left: 50px;
+      width: 50px;
+      height: 50px;
+      // top: 50px;
+      // left: 50px;
+      // background: red;
       position: absolute;
       transition: 120s all;
-      // color: rgba(3,155,229,0.33);
-      // transform: rotate(-23deg);
-      // background-color: red;
       animation: spin-clock-wise 8s linear infinite;
       z-index: 0;
 
       img {
         animation: spin-counter-clock-wise 8s linear infinite;
       }
+    }
+
+    #tk-float-hyper {
+      top: -30px;
+      left: -100px;
+    }
+    #tk-float-tonic {
+      top: 60px;
+      left: -200px;
+    }
+    #tk-float-tower {
+      bottom: 0;
     }
   }
 
