--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -640,20 +640,31 @@ $footer-color: white;
     position: relative;
     color: black;
     font-weight: 300;
-    font-size: 1.13rem;
-    max-width: 800px;
-    margin-left: 8%;
-    margin-right: 30px;
-    padding-bottom: 10rem;
+
+    @include mobile {
+      padding: 0;
+      font-size: 1rem;
+    }
 
     @include tablet {
+      font-size: $body-font-size;
       min-height: 90vh;
+      padding-bottom: 10rem;
+      max-width: 800px;
+      // margin-left: calc(0.75rem + 3%);
+      // margin-right: 30px;
     }
 
     h1.title {
-      font-size: 2.5rem;
-      // margin-bottom: 1.2rem;
       font-weight: 400;
+
+      @mobile {
+        font-size: 2rem;
+      }
+
+      @tablet {
+        font-size: 2.5rem;
+      }
     }
 
     h1:not(.title) {
