--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -650,9 +650,45 @@ $footer-color: white;
       font-size: $body-font-size;
       min-height: 90vh;
       padding-bottom: 10rem;
-      max-width: 800px;
+      max-width: 1100px;
       // margin-left: calc(0.75rem + 3%);
       // margin-right: 30px;
+    }
+
+    .tk-content-summary {
+      @media screen and (max-width: 1100px) {
+        display: none;
+      }
+
+      font-size: 0.9rem;
+
+      a {
+        color: $gray;
+        font-weight: 500;
+
+        &:hover {
+          color: darken($gray);
+        }
+      }
+
+      ul {
+        list-style-type: none;
+        margin-left: 1.5em;
+        li {
+          margin-bottom: 0.5em;
+        }
+      }
+
+      > ul {
+        border-left: solid 1px $light-gray;
+        padding-left: 2rem;
+        margin: 0;
+      }
+
+      .tk-content-summary-menu {
+        position: sticky;
+        top: 4rem;
+      }
     }
 
     h1.title {
@@ -687,20 +723,22 @@ $footer-color: white;
     }
 
     // Smaller bullet size
-    li {
-      list-style-type: none;
-      position: relative; /* It's needed for setting position to absolute in the next rule. */
-    }
-    li:not(:last-child) {
-      margin-bottom: 1rem;
-    }
+    .tk-markdown {
+      li {
+        list-style-type: none;
+        position: relative; /* It's needed for setting position to absolute in the next rule. */
+      }
+      li:not(:last-child) {
+        margin-bottom: 1rem;
+      }
 
-    li::before {
-      content: "·";
-      position: absolute;
-      left: -1.1rem;
-      top: -1.15rem;
-      font-size: 2.7rem;
+      li::before {
+        content: "·";
+        position: absolute;
+        left: -1.1rem;
+        top: -1.15rem;
+        font-size: 2.7rem;
+      }
     }
 
     code {
