--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -706,10 +706,15 @@ $footer-color: white;
       padding-bottom: 0.5rem;
       border-bottom: solid 1px $light-gray;
     }
-
     h2 {
       font-size: 1.2rem;
       margin-bottom: 1rem;
+    }
+    h3 {
+      font-size: 1.1rem;
+    }
+    h4 {
+      font-size: 1rem;
     }
 
     a {
